--- a/css/main.css
+++ b/css/main.css
@@ -11,16 +11,35 @@ body{
 header{
     height: 80px;
 }
+
 .navbar{
     height: 80px;
 }
 
 main{
-    height: calc(100vh - 82px);
+    height: calc(100vh - 80px);
+    padding-top: 200px;
 }
 
 .cardContainer{
-    min-height: 300px;
-    max-width: 800px;
-    
+    min-height: 50px;
+    max-width: 900px;
+    color: white;
+}
+
+.memberLine{
+    width: 100%;
+    height: 50px;
+    border: 1px solid rgb(72, 67, 67);
+    display: flex;
+}
+
+.memberInfo{
+    width: calc(100% / 3);
+    color: white;
+    border: 1px solid rgb(98, 90, 90);
+    min-height: 50px;
+    padding: 20px 5px;
+    display: flex;
+    align-items: center;
 }
